--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -37,6 +37,10 @@
       integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
       crossorigin="anonymous"
     />
+    <!-- custom stylesheet -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/style.css" />
+    <!-- fonts for the project -->
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>DevHub</title>
   </head>
   <body>
