working on top and side nav

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -41,6 +41,8 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/style.css" />
     <!-- fonts for the project -->
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <!-- font awesome icons link -->
+    <script src="https://kit.fontawesome.com/7d8919ada9.js" crossorigin="anonymous"></script>
     <title>DevHub</title>
   </head>
   <body>
