--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -37,12 +37,24 @@
       integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
       crossorigin="anonymous"
     />
+
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
     <!-- custom stylesheet -->
     <link rel="stylesheet" href="%PUBLIC_URL%/style.css" />
     <!-- fonts for the project -->
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <!-- font awesome icons link -->
-    <script src="https://kit.fontawesome.com/7d8919ada9.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/7d8919ada9.js"
+      crossorigin="anonymous"
+    ></script>
     <title>DevHub</title>
   </head>
   <body>
